Closed
Bug 336532
Opened 20 years ago
Closed 20 years ago
Animated gif with transparency shows black background
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: samuella, Assigned: bugz)
References
()
Details
(Keywords: regression)
Attachments
(4 files, 1 obsolete file)
|
64.29 KB,
image/gif
|
Details | |
|
1.48 KB,
image/gif
|
Details | |
|
1.53 KB,
image/gif
|
Details | |
|
3.03 KB,
patch
|
pavlov
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060429 Minefield/3.0a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060429 Minefield/3.0a1
If an animated gif is viewed that has been saved with a transparent layer, the background is shown as black.
Reproducible: Always
Steps to Reproduce:
1. open an animated gif like this one http://forum.cutaia.net/images/smiles/horse.gif
2. look at it
Actual Results:
The background of some frames is black
Expected Results:
The background should be transparent
Updated•20 years ago
|
Component: General → GFX: Thebes
Product: Firefox → Core
QA Contact: general → thebes
Version: unspecified → Trunk
Comment 1•20 years ago
|
||
Hmm, this was fixed as part of bug 324707 but seems to have regressed, see bug 324707 comment 20.
Updated•20 years ago
|
Comment 2•20 years ago
|
||
the testcase works in IE/Opera/non-cairo and pre- bug 324707 cairo builds
Comment 3•20 years ago
|
||
I discovered this same problem as I was working on my theme. I worked around it by adding a white (non-transparent!) pixel in the lower right corner of every frame (I did this after adding an extra column that I hide afterwards).
Comment 4•20 years ago
|
||
This has a constant white pixel in the lower right corner as my work around.
Comment 5•20 years ago
|
||
*** Bug 341942 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 7•20 years ago
|
||
This patch modifies SetMaskVisibility with rect version in way simmilar to patch from bug 324707.
Attachment #227587 -
Flags: review?(vladimir)
Comment on attachment 227587 [details] [diff] [review]
v1
Bouncing this r? to stuart; he knows imglib better than I do.
Attachment #227587 -
Flags: review?(vladimir) → review?(pavlov)
| Assignee | ||
Comment 9•20 years ago
|
||
This patch additionaly fixes issues where some frames are shifted from original position (like http://img.photobucket.com/albums/v51/DaMoo/de2108f2.gif)
Attachment #227587 -
Attachment is obsolete: true
Attachment #227632 -
Flags: review?(pavlov)
Attachment #227587 -
Flags: review?(pavlov)
Comment 10•20 years ago
|
||
When will the patch be applied to the latest trunk? I like to be beta testing Minefield, but it really bugs me, that animated gif's are shifted and in wrong colors :(
Comment 11•20 years ago
|
||
same thing happens with me, you may test it here: http://jndhost.com/forum/viewtopic.php?p=595&sid=e6339a19d584b3c45e7b9aa12adfa330#595
Comment 12•20 years ago
|
||
Comment on attachment 227632 [details] [diff] [review]
v2
dunno how i missed this
Attachment #227632 -
Flags: review?(pavlov) → review+
| Assignee | ||
Updated•20 years ago
|
Attachment #227632 -
Flags: superreview?(roc)
Attachment #227632 -
Flags: superreview?(roc) → superreview+
| Assignee | ||
Updated•20 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [checkin needed]
Updated•20 years ago
|
Assignee: nobody → prefiks
Status: ASSIGNED → NEW
Comment 13•20 years ago
|
||
mozilla/gfx/src/thebes/nsThebesRenderingContext.cpp 1.30
mozilla/modules/libpr0n/decoders/gif/imgContainerGIF.cpp 1.28
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Whiteboard: [checkin needed]
You need to log in
before you can comment on or make changes to this bug.
Description
•