Bug 336532: Animated gif with transparency shows black background, patch by Pawel Chmielowski <prefiks@aviary.pl>, r=stuart, sr=roc